Fix placement and change page width
The page was a little too narrow, so the width was changed more in line with the model. Therefore, the general placement of the content also had to be changed.

Other fixes included fine-tuning fonts and colors and removing unnecessary code.

--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,14 @@ body {
 }
 
 .page {
-    max-width: 1300px;
-    min-height: 500px;
+    max-width: 1440px;
+    min-width: 700px;
     margin: 0 auto;
 }
 
 .header,
 .footer {
-    height: 108px;
+    height: 100px;
     background-color: #1f2937;
 }
 
@@ -39,6 +39,7 @@ ul {
 a {
     text-decoration: none;
     color: #e5e7eb;
+    font-size: 18px;
 }
 
 .logo {
@@ -48,6 +49,7 @@ a {
 }
 
 .footer {
+    font-size: 18px;
     color:#e5e7eb;
     display: flex;
     align-items: center;
@@ -56,7 +58,7 @@ a {
 
 .content {
     background-color: #1f2937;
-    padding: 50px 200px;
+    padding: 50px 200px 70px;
     display: flex;
     align-items: center;
     gap: 50px;
@@ -68,7 +70,7 @@ a {
     align-items: flex-start;
     flex: 1;
     padding: 50px 50px 50px 0;
-    gap: 8px;
+    gap: 10px;
 }
 
 h1 {
@@ -80,18 +82,22 @@ h1 {
 
 p {
     margin: 0;
+    font-size: 18px;
     color:#e5e7eb;
 }
 
 .top-button,
 .bottom-button {
     background-color: #3882f6;
-    color: #f9faf8;
-    font-size: 16px;
-    font-weight: 600;
     padding: 12px 32px;
     border-radius: 8px;
     border-style: none;
+}
+
+.button-text {
+    color: #f9faf8;
+    font-size: 18px;
+    font-weight: 900;
 }
 
 .top-button {
@@ -121,8 +127,9 @@ h2 {
 
 .boxes-container {
     display: flex;
-    justify-content: space-evenly;
-    padding: 0 200px 150px;
+    justify-content: center;
+    padding: 0 200px 130px;
+    gap: 48px;
 }
 
 .box {
@@ -134,23 +141,26 @@ h2 {
     text-align: center;
     font-weight: 400;
     gap: 8px;
-    width: 150px;
+    width: 170px;
 
 }
 
+.text {
+    font-size: 18px;
+    color:#1f2937;
+}
+
 .picture {
-    border: 3px solid #3882f6;
-    border-radius: 12px;
+    border: 4px solid #3882f6;
+    border-radius: 16px;
     margin: 0 auto;
-    width: 150px;
-    height: 150px;
-    display: flex;
-    flex-shrink: 0;
+    width: 170px;
+    height: 170px;
 }
 
 .quote {
     background-color: #e5e7eb;
-    padding: 120px 270px;
+    padding: 120px 319px;
 }
 
 .quote .text {
@@ -161,9 +171,10 @@ h2 {
 }
 
 .quote .from {
-    font-size: 20px;
-    font-weight: 900;
+    font-size: 24px;
+    font-weight: 600;
     text-align: right;
+    color: #1f2937;
 }
 
 .call {
@@ -173,10 +184,10 @@ h2 {
 }
 
 .action-box {
-    width: 960px;
+    width: 1000px;
     border-radius: 8px;
-    margin: 120px 120px;
-    padding: 40px;
+    margin: 110px;
+    padding: 48px;
     display: flex;
     justify-content: space-evenly;
     gap: 100px;
@@ -189,8 +200,11 @@ h2 {
     font-weight: 900;
 }
 
+.below {
+    font-size: 18px;
+    color:#e5e7eb
+}
+
 .bottom-button {
     border: 2px solid #f9faf8;
 }
-
-
